[package]
name = "macroquad_sprites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4" 

nom_data = { path = "../nom_data" }
nom_graphics = { path = "../nom_graphics" }
rogalik = { git = "https://github.com/maciekglowka/rogalik.git" }