[package]
name = "nom"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "../../assets/"

[package.metadata.android.activity_attributes]
"android:exported" =  "true"
"android:screenOrientation" = "userPortrait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom_data = { path = "../nom_data" }
nom_game = { path = "../nom_game" }
nom_graphics = { path = "../nom_graphics" }
macroquad_sprites = { path = "../macroquad_sprites" }
rogalik = { git = "https://github.com/maciekglowka/rogalik.git" }

macroquad = "0.4" 
